--- a/index.html
+++ b/index.html
@@ -12,28 +12,30 @@
         <div class="calculator">
             <div class="input-group">
                 <label for="startMeter">Start Meter</label>
-                <input type="number" id="startMeter">
+                <input type="number" id="startMeter" placeholder="Enter start meter">
             </div>
             <div class="input-group">
                 <label for="endMeter">End Meter</label>
-                <input type="number" id="endMeter">
+                <input type="number" id="endMeter" placeholder="Enter end meter">
             </div>
             <div class="input-group">
                 <label for="hourlyRate">Hourly Rate (₹)</label>
-                <input type="number" id="hourlyRate">
+                <input type="number" id="hourlyRate" placeholder="Enter hourly rate">
             </div>
 
-            <div class="result-item">
-                <span>Total Time:</span>
-                <span class="result-value" id="totalTime">0h 0m</span>
-            </div>
-            <div class="result-item">
-                <span>Meter Points:</span>
-                <span class="result-value" id="meterPoints">0.00</span>
-            </div>
-            <div class="result-item">
-                <span>Total Amount:</span>
-                <span class="result-value" id="totalAmount">₹0.00</span>
+            <div class="results">
+                <div class="result-item">
+                    <span>Total Time:</span>
+                    <span class="result-value" id="totalTime">0h 0m</span>
+                </div>
+                <div class="result-item">
+                    <span>Meter Points:</span>
+                    <span class="result-value" id="meterPoints">0.00</span>
+                </div>
+                <div class="result-item">
+                    <span>Total Amount:</span>
+                    <span class="result-value" id="totalAmount">₹0.00</span>
+                </div>
             </div>
 
             <button id="resetButton">Reset</button>
