--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                 </div>
             </div>
 
+            <button id="calculateButton">Calculate</button>
             <button id="resetButton">Reset</button>
         </div>
     </div>
